Bug 72532 - desktop-shell toolbar tooltips display in random, incorrect positions
Summary: desktop-shell toolbar tooltips display in random, incorrect positions
Status: VERIFIED FIXED
Alias: None
Product: Wayland
Classification: Unclassified
Component: weston (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Wayland bug list
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-12-09 17:49 UTC by U. Artie Eoff
Modified: 2014-01-06 20:30 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
random placement of tooltips (250.71 KB, image/png)
2013-12-09 17:49 UTC, U. Artie Eoff
Details

Description U. Artie Eoff 2013-12-09 17:49:34 UTC
Created attachment 90529 [details]
random placement of tooltips

The application launcher icons in the desktop-shell toolbar display tooltips when hovered over with the pointer.  Those tooltips are supposed to display over the associated launcher icon.  However, they are displaying on the desktop in seemingly random locations, similar to how Top Level windows are mapped.

wayland (master) heads/master-0-g1521c62
drm (master) libdrm-2.4.50-0-g4c5de72
mesa (master) heads/master-0-g0319ea9
libva (master) heads/master-0-g73a11b3
intel-driver (master) heads/master-0-g9d0bd94
weston (master) heads/master-0-g8d344a0

See attached image
Comment 1 Kristian Høgsberg 2013-12-31 23:27:20 UTC
commit a1df7acb78e0fde8eb3165a0e1c1a77da50ea651
Author: Kristian Høgsberg <krh@bitplanet.net>
Date:   Tue Dec 31 15:01:01 2013 -0800

    shell: Set state_changed when we make a surface transient
    
    If we don't mark the state as changed, we don't copy over next_state to
    state and we fail to treat the surface as a transient.  In particular,
    we give it a random intial position instead of mapping it at the given
    parent relative position.
    
    https://bugs.freedesktop.org/show_bug.cgi?id=72532


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.